--- a/Introduction_to_ML.ipynb
+++ b/Introduction_to_ML.ipynb
@@ -6,7 +6,7 @@
       "name": "Introduction_to_ML.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNu/2P9Pf4J87W0OUaI7x8E",
+      "authorship_tag": "ABX9TyML/Wxk738KOWawpu/3h2iP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,8 @@
         "\n",
         "Machine Learning Framework\n",
         "\n",
-        "1. Problem Definition: What problem are we trying to solve\n",
+        "1. Problem Definition: What problem are we trying to solve?\n",
+        "2. Data\n",
         "\n",
         "\n",
         "\n",
